--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.2",
     "chai": "^3.0.0",
     "ecstatic": "^0.8.0",
+    "eslint": "^3.16.1",
     "express": "^4.13.3",
     "mocha": "^2.2.5",
     "mocha-phantomjs": "^4.0.1",
@@ -24,5 +25,10 @@
     "pg": "^6.1.2",
     "postgresql": "0.0.1",
     "sequelize": "^3.28.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
